# stellarthing

./: .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.lua  cmake_win32.cmake  go.mod  go.sum  main.c  main.go  meson.build  premake5.lua  release.sh  win32-cross-compile.ini
assets/: hurleycube.blend  hurleycube.blend1  lecube.glb  light.frag  light.vert  suzanne.blend  suzanne.blend1  suzanne.glb  suzanne.mtl
assets/blender/: bob.blend
assets/model/: bob_i_tried.vox
assets/species/: bob.glb
core/: benchmark.go  color.go  core.c  core.go  core.h  graphics.c  graphics.h  hashmap.c  hashmap.h  list.c  list.h  math.go  rect.go  stack.c  stack.h  vec2.go  vec2i.go  vec3.go  vec3i.go  vectors.go
core/bobx/: bobx.go
core/math/: color.c  color.h  math.c  math.h  rect.c  rect.h  vec.h
core/util/: debug_mode.go
docs/: conventions.md  core.md  entity.md  examples.md  platform.md  starry.md  tilemap.md  ui.md  util.md
entities/: entities.go
entity/: entities.go  group.go
game/generator/world/: blocks.h  world_gen.c  world_gen.h
game/player/: player.c  player.h
game/species/: player.go
lib/: FastNoiseLite.h  minilua.h  nuklear.h  raylib.hpp  raylib_nuklear_font.h  rlFPCamera.c  rlFPCamera.h  stb_ds_impl.c
lib/libmybrain/: README.md  libmybrain.h  losingmymap.c  losingmymap.h
main/: main.c
misc/debug/: console.c  console.h  debug_mode.c  debug_mode.h
misc/ui/: raylib_nuklear.c  ui.c  ui.h
modules/audio/: audio.go
modules/bobx/: bobx.go
modules/entities/: entities.go
modules/graphics/: graphics.go  texture.go  tilemap.go  tiles.go  world_gen.go
modules/platform/: input.go  input_keys.go  window.go
modules/util/: timer.go
platform/: input.c  input.go  input.h  input_enums.h  window.c  window.go  window.h
platform/audio/: audio.go
platform/graphics/: graphics.c  graphics.go  graphics.h  model.c  model.h  save_tilemap.go  texture.c  texture.go  texture.h  tilemap.go  tiles.go  world_gen.go
player/: player.go  save.go  ui.go
player/control/: player_controller.c  player_controller.h
player/debug/: console.c  console.h
scripts/: main.lua  update.lua
sigma/assets/shader/: light.frag  light.vert
species/: player.go
src/: game.h  main.c  main.cpp  premake5.lua
src/core/: core.h  core.hpp  ref.hpp  starry.c  starry.h  stlist.h  string.cpp  string.hpp  vectors.h  vectors.hpp
src/core/collections/: array.hpp  hashmap.cpp  hashmap.hpp  list.cpp  list.hpp  sthashmap.c  sthashmap.h  stlist.c  stlist.h  sttuple.h  tuple.hpp
src/core/math/: color.hpp  math.c  math.cpp  math.h  math.hpp  stcolor.c  stcolor.h  stvec2.c  stvec2.h  stvec2i.c  stvec2i.h  stvec3.c  stvec3.h  stvec3i.c  stvec3i.h  vec2.cpp  vec2.hpp  vec2i.cpp  vec2i.hpp  vec3.cpp  vec3.hpp  vec3i.cpp  vec3i.hpp
src/lib/: glad.c  raylib_nuklear.h
src/modules/assets/: assets.hpp
src/modules/audio/: audio.c  audio.h
src/modules/entities/: entities.h  groups.h
src/modules/extensions/: extensions.c  extensions.h
src/modules/graphics/: graphics.c  graphics.cpp  graphics.h  graphics.hpp  texture.c  texture.cpp  texture.h  texture.hpp  tilemap.c  tilemap.cpp  tilemap.h  tilemap.hpp
src/modules/platform/: input.c  input.h  input_enums.h  window.c  window.cpp  window.h  window.hpp
src/modules/util/: debug_mode.c  debug_mode.h  timer.c  timer.h  tween.c  tween.h
starry/: Starry.cs  StarrySettings.cs  starry.csproj
starry/assets/engine/shaders/: debug.frag  normal.frag  normal.vert  ripple.frag  shadow.frag  shadow.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  toon.frag  toon.vert  triangle.frag
starry/docs/: audio.md  starry.md
starry/entities/: Entities.cs
starry/graphics/: Camera.cs  Graphics.cs  Graphics3D.cs  GraphicsApi.cs  IParticle.cs  Light.cs  Material.cs  Mesh.cs  Model.cs  Object3D.cs  Particles.cs  Ray.cs  Shader.cs  Skybox.cs  Texture.cs  Tile.cs  TileParticles.cs  Tilemap.cs  Vertex.cs
starry/math/: StMath.cs  aabb.cs  vec3.cs
starry/platform/: AssetTypes.cs  Audio.cs  Input.cs  Key.cs  Music.cs  Sprites.cs  Window.cs
starry/util/: DebugMode.cs
staticLib/: premake5.lua
staticLib/include/: lib.h
staticLib/src/: lib.cpp
stellarthing/: Program.cs
stellarthing/assets/: bob_guy.mtl
stellarthing/assets/dev/: bob_guy.blend  bob_guy.blend1  locubo.blend  locubo.blend1
stellarthing/species/: Player.cs
tile/: collisions.go  tilemap.go  tiles.go  world_gen.go
ui/: button.go  input.go  slider.go  text.go  theme.go  ui.go
util/: benchmark.go  debug_mode.go  timer.go
